--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\=
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+kotlin.native.disableCompilerDaemon = true
