--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,8 +14,9 @@ compose-plugin = "1.6.11"
 junit = "4.13.2"
 kotlin = "2.0.0"
 lifecycleViewmodelCompose = "2.8.4"
-androidx-room = "2.7.0-alpha05"
+room = "2.7.0-alpha05"
 ksp = "2.0.0-1.0.23"
+sqlite = "2.5.0-SHANPSHOT"
 
 
 [libraries]
@@ -31,10 +32,10 @@ androidx-material = { group = "com.google.android.material", name = "material", 
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 
-androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidx-room" }
-androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidx-room" }
-androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidx-room" }
-
+room-runtime ={module ="androidx.room:room-runtime" ,version.ref ="room"}
+room-runtime-android ={module="androidx.room:room-runtime-android" , version.ref="room"}
+room-compiler ={module ="androidx.room:room-compiler" , version.ref="room"}
+sqlite-bundled ={module ="androidx.sqlite:sqlite-bundled", version.ref ="sqlite"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -43,5 +44,5 @@ jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 
-room = { id = "androidx.room", version.ref = "androidx-room" }
+room = { id = "androidx.room", version.ref = "room" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
