--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,14 +13,19 @@ androidx-test-junit = "1.2.1"
 compose-plugin = "1.6.11"
 junit = "4.13.2"
 kotlin = "2.0.0"
-lifecycleViewmodelCompose = "2.8.4"
+lifecycleViewmodel= "2.8.0-rc01"
 room = "2.7.0-alpha05"
 ksp = "2.0.0-1.0.23"
-sqlite = "2.5.0-SHANPSHOT"
+sqlite = "2.5.0-alpha05"
+
+koin ="3.6.0-alpha3"
+koinCompose="3.6.0-alpha3"
+koinComposeMultiplatform="1.2.0-alpha3"
+navigationCompose="2.7.0-alpha03"
+
 
 
 [libraries]
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -36,6 +41,12 @@ room-runtime ={module ="androidx.room:room-runtime" ,version.ref ="room"}
 room-runtime-android ={module="androidx.room:room-runtime-android" , version.ref="room"}
 room-compiler ={module ="androidx.room:room-compiler" , version.ref="room"}
 sqlite-bundled ={module ="androidx.sqlite:sqlite-bundled", version.ref ="sqlite"}
+
+koin-android ={module ="io.insert.koin:koin-core" , version.ref ="koin"}
+koin-androidx-compose={module="io.insert-koin:koin-androidx-compose", version.ref="koin"}
+koin-core ={module ="io.insert-koin:koin-core",version.ref="koinComposeMultiplatform"}
+navigation-compose = {module ="org.jetbrains.androidx.navigation:navigation-compose" , version.ref="navigationCompose"}
+androidx-lifecycle-viewmodel= { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycleViewmodel" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
