--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.5.1"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
-androidx-activityCompose = "1.9.0"
+androidx-activityCompose = "1.9.1"
 androidx-appcompat = "1.7.0"
 androidx-constraintlayout = "2.1.4"
 androidx-core-ktx = "1.13.1"
@@ -18,8 +18,8 @@ room = "2.7.0-alpha05"
 ksp = "2.0.0-1.0.23"
 sqlite = "2.5.0-alpha05"
 
-koin ="3.6.0-alpha3"
-koinCompose="3.6.0-alpha3"
+koin ="3.6.0-Beta5"
+koinCompose="3.6.0-Beta5"
 koinComposeMultiplatform="1.2.0-alpha3"
 navigationCompose="2.7.0-alpha03"
 
@@ -42,12 +42,12 @@ room-runtime-android ={module="androidx.room:room-runtime-android" , version.ref
 room-compiler ={module ="androidx.room:room-compiler" , version.ref="room"}
 sqlite-bundled ={module ="androidx.sqlite:sqlite-bundled", version.ref ="sqlite"}
 
-koin-android ={module ="io.insert.koin:koin-core" , version.ref ="koin"}
+koin-android ={module ="io.insert-koin:koin-core" , version.ref ="koin"}
 koin-androidx-compose={module="io.insert-koin:koin-androidx-compose", version.ref="koinCompose"}
 koin-core ={module ="io.insert-koin:koin-core",version.ref="koin"}
 koin-compose ={module ="io.insert-koin:koin-compose", version.ref="koinComposeMultiplatform"}
 navigation-compose = {module ="org.jetbrains.androidx.navigation:navigation-compose" , version.ref="navigationCompose"}
-androidx-lifecycle-viewmodel= { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycleViewmodel" }
+androidx-lifecycle-viewmodel= { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodel" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
