--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ koinCompose="3.6.0-Beta5"
 koinComposeMultiplatform="1.2.0-alpha3"
 navigationCompose="2.7.0-alpha03"
 
+dateTime="0.6.0"
+
 
 
 [libraries]
@@ -42,12 +44,14 @@ room-runtime-android ={module="androidx.room:room-runtime-android" , version.ref
 room-compiler ={module ="androidx.room:room-compiler" , version.ref="room"}
 sqlite-bundled ={module ="androidx.sqlite:sqlite-bundled", version.ref ="sqlite"}
 
-koin-android ={module ="io.insert-koin:koin-core" , version.ref ="koin"}
+koin-android ={module ="io.insert-koin:koin-android" , version.ref ="koin"}
 koin-androidx-compose={module="io.insert-koin:koin-androidx-compose", version.ref="koinCompose"}
 koin-core ={module ="io.insert-koin:koin-core",version.ref="koin"}
 koin-compose ={module ="io.insert-koin:koin-compose", version.ref="koinComposeMultiplatform"}
 navigation-compose = {module ="org.jetbrains.androidx.navigation:navigation-compose" , version.ref="navigationCompose"}
 androidx-lifecycle-viewmodel= { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodel" }
+
+kotlinx-datetime ={module ="org.jetbrains.kotlinx:kotlinx-datetime", version.ref ="dateTime"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
