--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ lifecycleViewmodel= "2.8.4"
 room = "2.7.0-alpha05"
 ksp = "2.0.0-1.0.23"
 sqlite = "2.5.0-alpha05"
+coroutines="1.8.1"
 
 koin ="3.6.0-Beta5"
 koinCompose="3.6.0-Beta5"
@@ -38,6 +39,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-material = { group = "com.google.android.material", name = "material", version.ref = "androidx-material" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
+kotlinx-coroutines-jvm = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "coroutines" }
 
 room-runtime ={module ="androidx.room:room-runtime" ,version.ref ="room"}
 room-runtime-android ={module="androidx.room:room-runtime-android" , version.ref="room"}
