--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ room = "2.7.0-alpha05"
 ksp = "2.0.0-1.0.23"
 sqlite = "2.5.0-alpha05"
 coroutines="1.8.1"
+tablerIconPack ="1.1.0"
 
 koin ="3.6.0-Beta5"
 koinCompose="3.6.0-Beta5"
@@ -40,7 +41,8 @@ androidx-material = { group = "com.google.android.material", name = "material", 
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 kotlinx-coroutines-jvm = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "coroutines" }
-
+#implementation("androidx.compose.ui:ui-tooling-preview:1.1.1")
+preview-tooling ={module ="androidx.compose.ui:ui-tooling-preview" , version="1.6.8"}
 room-runtime ={module ="androidx.room:room-runtime" ,version.ref ="room"}
 room-runtime-android ={module="androidx.room:room-runtime-android" , version.ref="room"}
 room-compiler ={module ="androidx.room:room-compiler" , version.ref="room"}
@@ -54,6 +56,10 @@ navigation-compose = {module ="org.jetbrains.androidx.navigation:navigation-comp
 androidx-lifecycle-viewmodel= { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodel" }
 
 kotlinx-datetime ={module ="org.jetbrains.kotlinx:kotlinx-datetime", version.ref ="dateTime"}
+
+
+
+tabler-icon-pack ={module ="br.com.devsrsouza.compose.icons:tabler-icons",version.ref = "tablerIconPack"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
